--- a/index.html
+++ b/index.html
@@ -18,187 +18,227 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
   </head>
-  <body class="body-class">
+  <body>
     <!-- navigation-menu -->
-    <header>
-      <nav class="navigation">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-span">Studio</span></a
-        >
-        <ul class="navigation-list">
-          <li>
-            <a href="./index.html" class="menu-head-current-link">Studio</a>
-          </li>
-          <li>
-            <a href="" class="menu-head-current-link">Portfolio</a>
-          </li>
-          <li><a href="" class="menu-head-current-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="mail-tel">
-          <li>
-            <a href="mailto:info@devstudio.com" class="mail-and-tel"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="mail-and-tel"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+    <header class="page-header">
+      <div class="page-header-container container">
+        <nav class="navigation">
+          <a href="./index.html" class="logo link"
+            >Web<span class="logo-span">Studio</span></a
+          >
+          <ul class="navigation-list list">
+            <li>
+              <a href="#" class="menu-head-current-link link">Studio</a>
+            </li>
+            <li>
+              <a href="#" class="menu-head-current-link link">Portfolio</a>
+            </li>
+            <li>
+              <a href="#" class="menu-head-current-link link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="mail-tel list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="mail-and-tel link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="mail-and-tel link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!-- main-page-button -->
       <section class="main-page">
         <h1 class="main-page-text">Effective Solutions for Your Business</h1>
-        <button type="button" class="button">Order Service</button>
+        <section class="button-pad">
+          <button type="button" class="button-first button">
+            Order Service
+          </button>
+        </section>
       </section>
 
       <!-- features -->
       <section class="features">
-        <h2 class="invisible-header">Features</h2>
-        <ul class="all-features">
-          <li class="feature">
-            <h3 class="feature-name">Strategy</h3>
-            <p class="feature-description">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-name">Punctuality</h3>
-            <p class="feature-description">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-name">Diligence</h3>
-            <p class="feature-description">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="feature">
-            <h3 class="feature-name">Technologies</h3>
-            <p class="feature-description">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="features-container container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="all-features list">
+            <li class="feature">
+              <h3 class="feature-name">Strategy</h3>
+              <p class="feature-description">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-name">Punctuality</h3>
+              <p class="feature-description">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-name">Diligence</h3>
+              <p class="feature-description">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="feature">
+              <h3 class="feature-name">Technologies</h3>
+              <p class="feature-description">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- team -->
       <section class="team-information">
-        <h2 class="our-team">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-member">
-            <img
-              src="./images/image.01.jpg"
-              alt="Mark-Guerrero-fhoto"
-              width="264"
-            />
-            <h3 class="name">Mark Guerrero</h3>
-            <p class="position">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img src="./images/image.02.jpg" alt="Tom-Ford-photo" width="264" />
-            <h3 class="name">Tom Ford</h3>
-            <p class="position">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/image.03.jpg"
-              alt="Camila-Garcia-photo"
-              width="264"
-            />
-            <h3 class="name">Camila Garcia</h3>
-            <p class="position">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img
-              src="./images/image.04.jpg"
-              alt="Daniel-Wilson-photo"
-              width="264"
-            />
-            <h3 class="name">Daniel Wilson</h3>
-            <p class="position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="team-inf-container container">
+          <h2 class="our-team">Our Team</h2>
+          <ul class="team-list list">
+            <li class="team-member">
+              <img
+                src="./images/image.01.jpg"
+                alt="Mark-Guerrero-fhoto"
+                width="264"
+              />
+              <h3 class="name">Mark Guerrero</h3>
+              <p class="position">Product Designer</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/image.02.jpg"
+                alt="Tom-Ford-photo"
+                width="264"
+              />
+              <h3 class="name">Tom Ford</h3>
+              <p class="position">Frontend Developer</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/image.03.jpg"
+                alt="Camila-Garcia-photo"
+                width="264"
+              />
+              <h3 class="name">Camila Garcia</h3>
+              <p class="position">Marketing</p>
+            </li>
+            <li class="team-member">
+              <img
+                src="./images/image.04.jpg"
+                alt="Daniel-Wilson-photo"
+                width="264"
+              />
+              <h3 class="name">Daniel Wilson</h3>
+              <p class="position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- portfolio -->
       <section class="portfolio">
-        <h2 class="our-portfolio">Our Portfolio</h2>
-        <ul class="projects">
-          <li class="project">
-            <img
-              src="./images/bankapp.jpg"
-              alt="banking-app-photo"
-              width="360"
-            />
-            <h3 class="project-name">Banking App</h3>
-            <p class="kind-of-project">App</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/payment.jpg"
-              alt="cashless-payment-photo"
-              width="360"
-            />
-            <h3 class="project-name">Cashless Payment</h3>
-            <p class="kind-of-project">Marketing</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/meditation.jpg"
-              alt="meditation-app-photo"
-              width="360"
-            />
-            <h3 class="project-name">Meditation App</h3>
-            <p class="kind-of-project">App</p>
-          </li>
-          <li class="project">
-            <img src="./images/taxi.jpg" alt="taxi-service-photo" width="360" />
-            <h3 class="project-name">Taxi Service</h3>
-            <p class="kind-of-project">Marketing</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/screen.jpg"
-              alt="screen-illustrations-photo"
-              width="360"
-            />
-            <h3 class="project-name">Screen Illustrations</h3>
-            <p class="kind-of-project">Design</p>
-          </li>
-          <li class="project">
-            <img
-              src="./images/courses.jpg"
-              alt="online-courses-photo"
-              width="360"
-            />
-            <h3 class="project-name">Online Courses</h3>
-            <p class="kind-of-project">Marketing</p>
-          </li>
-        </ul>
+        <div class="portfolio-container container">
+          <h2 class="our-portfolio">Our Portfolio</h2>
+          <ul class="projects-list list">
+            <li class="project">
+              <img
+                src="./images/bankapp.jpg"
+                alt="banking-app-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Banking App</h3>
+                <p class="kind-of-project">App</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/payment.jpg"
+                alt="cashless-payment-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Cashless Payment</h3>
+                <p class="kind-of-project">Marketing</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/meditation.jpg"
+                alt="meditation-app-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Meditation App</h3>
+                <p class="kind-of-project">App</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/taxi.jpg"
+                alt="taxi-service-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Taxi Service</h3>
+                <p class="kind-of-project">Marketing</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/screen.jpg"
+                alt="screen-illustrations-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Screen Illustrations</h3>
+                <p class="kind-of-project">Design</p>
+              </div>
+            </li>
+            <li class="project">
+              <img
+                src="./images/courses.jpg"
+                alt="online-courses-photo"
+                width="360"
+              />
+              <div class="portfolio-border">
+                <h3 class="project-name">Online Courses</h3>
+                <p class="kind-of-project">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer -->
     <footer class="page-footer">
-      <a href="./index.html" class="logo-footer"
-        >Web<span class="logo-span-footer">Studio</span></a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="page-footer-container container">
+        <a href="./index.html" class="logo-footer link"
+          >Web<span class="logo-span-footer">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
