--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
     <main>
       <!-- main-page-button -->
       <section class="main-page">
-        <h1 class="main-page-text">Effective Solutions for Your Business</h1>
+       <div class="main-page-container container"> <h1 class="main-page-text">Effective Solutions for Your Business</h1>
         <section class="button-pad">
           <button type="button" class="button-first button">
             Order Service
           </button>
+        </div>
         </section>
       </section>
 
@@ -118,8 +119,8 @@
                 alt="Mark-Guerrero-fhoto"
                 width="264"
               />
-              <h3 class="name">Mark Guerrero</h3>
-              <p class="position">Product Designer</p>
+             <div class="team-member-container"> <h3 class="name">Mark Guerrero</h3>
+              <p class="position">Product Designer</p></div>
             </li>
             <li class="team-member">
               <img
@@ -127,8 +128,8 @@
                 alt="Tom-Ford-photo"
                 width="264"
               />
-              <h3 class="name">Tom Ford</h3>
-              <p class="position">Frontend Developer</p>
+              <div class="team-member-container"><h3 class="name">Tom Ford</h3>
+              <p class="position">Frontend Developer</p></div>
             </li>
             <li class="team-member">
               <img
@@ -136,8 +137,8 @@
                 alt="Camila-Garcia-photo"
                 width="264"
               />
-              <h3 class="name">Camila Garcia</h3>
-              <p class="position">Marketing</p>
+              <div class="team-member-container"><h3 class="name">Camila Garcia</h3>
+              <p class="position">Marketing</p></div>
             </li>
             <li class="team-member">
               <img
@@ -145,8 +146,8 @@
                 alt="Daniel-Wilson-photo"
                 width="264"
               />
-              <h3 class="name">Daniel Wilson</h3>
-              <p class="position">UI Designer</p>
+             <div class="team-member-container"> <h3 class="name">Daniel Wilson</h3>
+              <p class="position">UI Designer</p></div>
             </li>
           </ul>
         </div>
