--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
     <main>
       <!-- main-page-button -->
       <section class="main-page">
-       <div class="main-page-container container"> <h1 class="main-page-text">Effective Solutions for Your Business</h1>
-        <section class="button-pad">
-          <button type="button" class="button-first button">
-            Order Service
-          </button>
+        <div class="main-page-container container">
+          <h1 class="main-page-text">Effective Solutions for Your Business</h1>
+          <div class="button">
+            <button type="button" class="button-first button">
+              Order Service
+            </button>
+          </div>
         </div>
-        </section>
       </section>
 
       <!-- features -->
@@ -119,8 +120,10 @@
                 alt="Mark-Guerrero-fhoto"
                 width="264"
               />
-             <div class="team-member-container"> <h3 class="name">Mark Guerrero</h3>
-              <p class="position">Product Designer</p></div>
+              <div class="team-member-container">
+                <h3 class="name">Mark Guerrero</h3>
+                <p class="position">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -128,8 +131,10 @@
                 alt="Tom-Ford-photo"
                 width="264"
               />
-              <div class="team-member-container"><h3 class="name">Tom Ford</h3>
-              <p class="position">Frontend Developer</p></div>
+              <div class="team-member-container">
+                <h3 class="name">Tom Ford</h3>
+                <p class="position">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -137,8 +142,10 @@
                 alt="Camila-Garcia-photo"
                 width="264"
               />
-              <div class="team-member-container"><h3 class="name">Camila Garcia</h3>
-              <p class="position">Marketing</p></div>
+              <div class="team-member-container">
+                <h3 class="name">Camila Garcia</h3>
+                <p class="position">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -146,8 +153,10 @@
                 alt="Daniel-Wilson-photo"
                 width="264"
               />
-             <div class="team-member-container"> <h3 class="name">Daniel Wilson</h3>
-              <p class="position">UI Designer</p></div>
+              <div class="team-member-container">
+                <h3 class="name">Daniel Wilson</h3>
+                <p class="position">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
