--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
       <section class="main-page">
         <div class="main-page-container container">
           <h1 class="main-page-text">Effective Solutions for Your Business</h1>
-          <div class="button">
-            <button type="button" class="button-first button">
-              Order Service
-            </button>
+          <div class="btn">
+            <button type="button" class="button">Order Service</button>
           </div>
         </div>
       </section>
