--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="features">
         <div class="features-container container">
           <h2 class="visually-hidden">Features</h2>
-          <ul class="all-features list">
+          <ul class="all-features-list list">
             <li class="feature">
               <h3 class="feature-name">Strategy</h3>
               <p class="feature-description">
